<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_fullscreen"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@color/secondary_background"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:contentDescription="logo"
        android:src="@drawable/insider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/electrolize"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="45sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/electrolize"
        android:gravity="center"
        android:text="@string/welcome_msg"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/electrolize"
        android:gravity="center"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColor="@color/secondary_text_color"
        android:textColorHint="#30000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/electrolize"
        android:gravity="center"
        android:hint="password"
        android:inputType="textPassword"
        android:textColor="@color/secondary_text_color"
        android:textColorHint="#30000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="Login"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/loginGoogle"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/google" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="SIGN IN WITH GOOGLE" />

    </LinearLayout>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/loginRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text_color"
        android:fontFamily="@font/electrolize"
        android:text="@string/remember"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:text="Forgot Password"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:text="   |   "
            android:textSize="14sp" />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:text="Register"
            android:textSize="14sp" />


    </LinearLayout>

</LinearLayout>